Exhibit, advance search, other fixes
