# contracts/openapi.yaml
@@ -22,6 +22,8 @@ paths:
     $ref: './paths/traces.yaml#/~1investigations~1{investigationId}~1traces'
   /traces/{id}:
     $ref: './paths/traces.yaml#/~1traces~1{id}'
+  /investigations/{id}/search-between:
+    $ref: './paths/investigations.yaml#/~1investigations~1{id}~1search-between'
   /blockchain/fetch-history:
     $ref: './paths/blockchain.yaml#/~1blockchain~1fetch-history'
   /cases/{caseId}/conversations:
@@ -62,6 +64,8 @@ paths:
     $ref: './paths/export.yaml#/~1exports~1productions~1{id}'
   /exports/graph:
     $ref: './paths/export.yaml#/~1exports~1graph'
+  /exports/exhibit:
+    $ref: './paths/export.yaml#/~1exports~1exhibit'
   /cases/{caseId}/data-room/connect:
     $ref: './paths/data-room.yaml#/~1cases~1{caseId}~1data-room~1connect'
   /data-room/oauth-callback:
@@ -99,6 +103,14 @@ components:
       $ref: './schemas/traces.yaml#/CreateTraceRequest'
     UpdateTraceRequest:
       $ref: './schemas/traces.yaml#/UpdateTraceRequest'
+    ImportTransactionItem:
+      $ref: './schemas/traces.yaml#/ImportTransactionItem'
+    WalletSet:
+      $ref: './schemas/traces.yaml#/WalletSet'
+    SearchBetweenRequest:
+      $ref: './schemas/traces.yaml#/SearchBetweenRequest'
+    SearchBetweenResponse:
+      $ref: './schemas/traces.yaml#/SearchBetweenResponse'
     FetchHistoryRequest:
       $ref: './schemas/blockchain.yaml#/FetchHistoryRequest'
     FetchHistoryResponse:
